--- a/inputForm.html
+++ b/inputForm.html
@@ -85,9 +85,9 @@
                 <td>
                     <label for="inputTheme">Theme de stage</label>
                 </td>
-                <td>
+                <td colspan="2">
                     <select id="inputTheme">
-                        <option value="none_selected">Selectionner</option>
+                        <option value="none_selected">Selectionner le theme</option>
                         <option value="genie_info">Genie Informatique</option>
                         <option value="genie_civil">Genie Civil</option>
                         <option value="tech_juri">Techniques Juridiques</option>
